--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>React App</title>
     <style>
       body {
